# pfb

./: .gitignore  ChangeLog.md  Pipfile  README.md  fir.1024.dada  modulefiles  pyproject.toml  setup.py
deprecated/: pfb_analysis.py  pfb_channelizer.01-05-2019.py  pfb_channelizer.py  pfb_channelzer.01-03-2019.py  test_pfb_channelizer.py
pfb/: __init__.py  channelize.py  fft_windows.py  format_handler.py  formats.py  pfb_analysis.py  pfb_channelizer.py  pfb_synthesis.py  rational.py  util.py
pfb/__pycache__/: pfb_channelizer.apply_filter-21.py36m.1.nbc  pfb_channelizer.apply_filter-21.py36m.nbi  pfb_channelizer.filter-21.py36m.1.nbc  pfb_channelizer.filter-21.py36m.nbi  pfb_channelizer.filter-22.py36m.nbi  pfb_channelizer.filter-24.py36m.1.nbc  pfb_channelizer.filter-24.py36m.nbi
sandbox/: apply_filter_sandbox.py  generate_fir_dada_file.py  generate_window_dat.py  plot_dspsr_fir_response.py
src/: formats.py  pfb_channelizer.py  util.py
src/pfb/: formats.py  pfb_channelizer.py  util.py
src/pfb/__pycache__/: pfb_channelizer.filter-22.py36m.1.nbc  pfb_channelizer.filter-23.py36m.1.nbc  pfb_channelizer.filter-23.py36m.nbi  pfb_channelizer.filter-24.py36m.1.nbc  pfb_channelizer.filter-24.py36m.nbi
test/: test_formats.py  test_imports.py  test_pfb_analysis.py  test_pfb_analysis_verification.py  test_pfb_channelizer.py  test_pfb_inverter.py  test_pfb_synthesis.py  test_pfb_synthesis_verfication.py  test_pfb_synthesis_verification.py  test_util.py
test/test_data/: test.dada
