[tool.poetry]
name = "pfb"
version = "0.5.1"
description = ""
authors = ["Dean Shaff <dshaff@swin.edu.au>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
scipy = "^1.2"
numba = "^0.43"
psr-formats = {git = "git@github.com:dean-shaff/psr-formats.git"}
partialize = {git = "git@github.com:dean-shaff/partialize.git"}
comparator = {git = "git@github.com:dean-shaff/comparator.git"}

[tool.poetry.dev-dependencies]
matplotlib = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
